--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "init": "pnpm install && sh ./scripts/jwt-keygen.sh",
+    "create-rsa": "sh ./scripts/jwt-keygen.sh",
     "start": "nodemon index.ts",
     "prepare": "husky install"
   },
@@ -12,9 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.3",
+    "ms": "^2.1.3",
     "supervisor": "^0.12.0",
     "zod": "^3.19.1"
   },
@@ -22,7 +27,10 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/ms": "^0.7.31",
     "@types/node": "^18.8.0",
     "concurrently": "^7.4.0",
     "eslint": "^8.26.0",
