--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "init": "pnpm install && sh ./scripts/jwt-keygen.sh",
     "create-rsa": "sh ./scripts/jwt-keygen.sh",
     "start": "nodemon index.ts",
+    "build": "tsc",
     "prepare": "husky install"
   },
   "keywords": [],
