--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^6.6.3",
     "ms": "^2.1.3",
     "supervisor": "^0.12.0",
+    "swagger-ui-express": "^4.6.0",
+    "yamljs": "^0.3.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
@@ -33,6 +35,8 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/ms": "^0.7.31",
     "@types/node": "^18.8.0",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "concurrently": "^7.4.0",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
