--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "init": "pnpm install && sh ./scripts/jwt-keygen.sh",
     "create-rsa": "sh ./scripts/jwt-keygen.sh",
-    "start": "nodemon index.ts",
+    "start": "NODE_ENV=development nodemon index.ts",
+    "prod": "NODE_ENV=production node ./dist/index.js",
     "build": "tsc",
     "prepare": "husky install"
   },
@@ -18,9 +19,12 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.3",
     "ms": "^2.1.3",
+    "rate-limit-redis": "^3.0.1",
+    "redis": "^4.5.1",
     "supervisor": "^0.12.0",
     "swagger-ui-express": "^4.6.0",
     "yamljs": "^0.3.0",
